Changed map-layer-set title color and weight

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         --theme-hover-background-color: #3982b9;
         --theme-active-background-color: #286CA0;
         --theme-color: white;
+        --theme-text-color-primary: #2e7dba;
       }
     </style>
     <script>
