--- a/mapbox.html
+++ b/mapbox.html
@@ -63,6 +63,7 @@
     <!--link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' /-->
     <script src="node_modules/@edugis/mapbox-gl-draw/dist/mapbox-gl-draw.js"></script>
     <!-- workaround bug mapbox-gl v.051, https://github.com/mapbox/mapbox-gl-js/issues/7589 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <style>
       .mapboxgl-ctrl.mapboxgl-ctrl-attrib p {
         display: inline-block;
